# clinic_finances

./: .env.example  .gitignore  alembic.ini  docker-compose.yml  extract_pdf.py  import_insurance_claims.py  import_invoice.py  import_patients.py  ingestion_pdf.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 014ddd4166b2_add_procedures_table_and_fk_from_.py  182c5913da7d_create_logs_table.py  1cd4d59573b9_change_id_column_uuid_generation.py  32cb5094e56e_reorder_procedimento_1_column_in_tb_solicitacoes_sao_lucas.py  34c075198a77_add_invoice_table.py  42812ae5297c_add_id_claim_as_primary_key_for_.py  5898701e0bbe_rename_patient_columns_to_english.py  654cec6385ab_remove_id_from_patients_add_table_and_.py  6cd71b06164f_reorder_columns_in_insurance_claims_to_.py  855fd9e3cb15_create_table_tb_recibos_sao_lucas_at_.py  8d5de2a149f6_create_table_tb_recibos_sao_lucas_at_.py  a1b2c3d4e5f6_create_log_table.py  ab09b1768619_create_insurance_claims_table.py  acb95ea1ed3d_create_table_atentimentos_sao_lucas_.py  (+10 more)
core/: __init__.py  database.py
data/: 202601_atendimentos_sao_lucas.csv  relatorio_atendimentos_extraido.csv  relatorio_atendimentos_extraido.xlsx
models/: __init__.py  insurance_claim.py  invoice.py  log.py  patient.py  procedures.py
notebooks/: data_overview.ipynb  data_overview.py  patients.py
schemas/: __init__.py  insurance_claim.py  invoice.py  patient.py  procedures.py
services/: __init__.py  insurance_claim_service.py  invoice_service.py  patient_service.py  procedures.py  read_csv.py
src/: __init__.py
src/core/: __init__.py  base.py  (+8 more)
(+22 files in other folders)
